openmrs/mysql.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mysql-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: mysql-db-pod
      labels:
        app: mysql-db
        ver: "1.0"
    spec:
      containers:
        - name: mysql
          image: mysql-8-debian
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-vol
          
      volumes:
        - name: mysql-vol
          persistentVolumeClaim:
            claimName: mysql-pvc
