openmrs/gameoflife-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gamneoflife-svc
spec:
  type: LoadBalancer
  selector:
    app: gameoflife-pod
  ports:
  - port: 4000
    targetPort: 8080
