openmrs/openmrs-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: openmrs-svc
spec:
  type: LoadBalancer
  selector:
    app: openmrs-app
  ports:
  - port: 5000
    targetPort: 8080
